--- a/team3s.css
+++ b/team3s.css
@@ -123,3 +123,8 @@ a:active{
   margin-left:20px;
   padding-right:18px;
 }
+@media screen and (min-width:550px) {
+  .Design{
+    width:100;
+    height: 40px;
+  }
